--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -23,7 +23,7 @@ spring:
         connectionTestQuery : SELECT 1
   jpa:
     hibernate:
-      ddl-auto: update 
+      # ddl-auto: update 
       naming: 
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         
