--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,31 +15,30 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     # pool 설정
     hikari:
-        connectionTimeout : 20000 # 20 seconds
-        maximumPoolSize : 10
-        maxLifetime : 1800000
-        poolName : HikariCP
-        readOnly : false
-        connectionTestQuery : SELECT 1
+      connectionTimeout: 20000 # 20 seconds
+      maximumPoolSize: 10
+      maxLifetime: 1800000
+      poolName: HikariCP
+      readOnly: false
+      connectionTestQuery: SELECT 1
   jpa:
     hibernate:
-      # ddl-auto: update 
-      naming: 
+      # ddl-auto: update
+      naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-        
+
     generate-ddl: false
     show-sql: true
     database: mysql
     database-platform: org.hibernate.dialect.MySQL8Dialect
     properties:
       hibernate:
-        '[format_sql]': true
+        "[format_sql]": true
 
 logging:
   level:
     org:
       hibernate: info
-  
 
 secret:
   password: SECRET_KEY
